<resources>
    <string name="app_name">Car Finder</string>
    <string name="channel_name">Car Finder</string>
    <string name="channel_description">Car Finder Notifications</string>
    <string name="share_text">Hey, i parked here:</string>
    <string name="activity_recognition_na">Automatic parking spot detection is not available on your device.</string>
    <string name="own_position">Current Position</string>
    <string name="added_on">Added on:</string>
    <string name="foreground_loc_title">CarFinder Location</string>
    <string name="foreground_loc_ticker">CarFinder Location</string>
    <string name="foreground_loc_text">Trying to locate your parking spot...</string>
    <string name="notify_auto_title">Automatically detected your parking spot.</string>
    <string name="notify_auto_content">Did you park here:</string>
    <string name="btn_delete">Delete</string>
    <string name="title_photo">Photo:</string>
    <string name="title_note">Note:</string>
    <string name="add_clock">Add parking meter</string>
    <string name="btn_navigate">Navigate</string>
    <string name="btn_park_here">Park</string>
    <string name="add_new_spot">Add a new parking spot:</string>
    <string name="default_spot_name">New Parking Spot</string>
    <string name="add_photo">Add a photo</string>
    <string name="add_note">Add a note</string>
    <string name="menu_show_map">Show on map</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_cat_common">General Settings</string>
    <string name="settings_cat_other">Other</string>
    <string name="settings_desc_auto">Uses activity recognition to automatically detect parking</string>
    <string name="settings_tl_auto">Automatic parking detection</string>
    <string name="settings_desc_notify">Specify which notificatons are sent</string>
    <string name="settings_tl_notify">Notifications</string>
    <string name="settings_desc_bldevice">Select your cars BT device</string>
    <string name="settings_tl_bldevice">Bluetooth device</string>
    <string name="dialog_ok">Okay</string>
    <string name="dialog_enter_note">Enter a note:</string>
    <string name="display_more_information">Click on a History element to display more Information.</string>
    <string name="notify_park_clock">Your Parking Meter is expired!</string>
    <string name="parking_meter_set">Parking meter was set to:</string>
    <string name="parking_meter_expires">Parking meter expires at </string>
    <string name="parking_meter_not_set">Parking meter was not set.</string>
    <string name="pref_desc_enhanced">May drain the battery faster.</string>
    <string name="pref_title_enhanced">Enhanced auto-detection (experimental)</string>
    <string name="swipe_left_to_delete">Swipe left to delete.</string>
    <string name="watch_out">Watch out!</string>
    <string name="create_parked_time">"Parked: "</string>
    <string name="intelligent_expiration">You\'d better step back!</string>
    <string name="intelligent_expiration_desc">Start to walk back to your parking spot now to reach it before the parking meter expires!</string>
    <string name="parking_spot">Parking Spot</string>
    <string name="added_by_wear">Added by Wearable Extension.</string>
</resources>
