<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
         <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_auto_recognition"
            android:summary="@string/settings_desc_auto"
            android:title="@string/settings_tl_auto"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_enhanced_recognition"
            android:summary="@string/pref_desc_enhanced"
            android:title="@string/pref_title_enhanced"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:key="pref_key_surr_spots"
            android:summary="Show surrounding parking spots on the map."
            android:title="Show parking spots"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:key="pref_key_bluetooth"
            android:summary="Erkennung vom Parken durch Bluetooth-Überwachung"
            android:title="Bluetooth"
            app:iconSpaceReserved="false" />

        <MultiSelectListPreference
            android:key="pref_key_bluetooth_device"
            android:summary="@string/settings_desc_bldevice"
            android:title="@string/settings_tl_bldevice"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_parking_meter"
            android:summary="Remind me earlier!"
            android:title="Parking Meter"
            app:iconSpaceReserved="false" />
        <ListPreference
            android:defaultValue="2"
            android:key="pref_key_set_parking_meter"
            android:summary="Set Time to set up Alarm earlier"
            android:title="Parking Meter Timer"
            app:iconSpaceReserved="false" />


</PreferenceScreen>